// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processValidationResult > given errors returns unsuccessfully 1`] = `
{
  "resultText": "Validated https://deploy-preview-9669--docusaurus-2.netlify.app/blog/releases/2.4/ and failed with 1 errors and 0 warnings",
  "success": false,
}
`;

exports[`processValidationResult > given no structured data returns unsuccessfully 1`] = `
{
  "resultText": "Validated https://news.ycombinator.com/ and found no objects",
  "success": false,
}
`;

exports[`processValidationResult > given valid schema without errors / warnings returns successfully 1`] = `
{
  "resultText": "Validated https://deploy-preview-9669--docusaurus-2.netlify.app/blog/releases/2.4/!",
  "success": true,
}
`;

exports[`processValidationResult > given warnings returns unsuccessfully 1`] = `
{
  "resultText": "Validated https://deploy-preview-9669--docusaurus-2.netlify.app/blog/releases/2.4/ and failed with 0 errors and 1 warnings",
  "success": false,
}
`;
